<resources>
    <string name="app_name">Power Zone Gym</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="phone">Phone Number</string>

    <string name="phoneLbl">Phone Number :</string>
    <string name="emailLbl">Email :</string>
    <string name="packageLbl">Package :</string>
    <string name="feeLbl">Total Payable :</string>

    <string name="welcome_to_messenger">Welcome to the Power Zone Gym</string>
    <string name="stay_in_touch">Login to your account or create an account</string>
    <string name="create_new_account">Create new account</string>

    <string name="spinner_prompt">Select an option</string>
    <string-array name="spinner_items">
        <item>3 Months Plan</item>
        <item>6 Months Plan</item>
        <item>12 Months Plan</item>
    </string-array>
</resources>